# prototype-orbit

./: Cargo.toml  README.md  benchwatch  run  testwatch  watch
src/: compute.rs  ease.rs  input.rs  main.rs  psobuilder.rs  seer.rs  smooth.rs  state.rs  svsc.rs
src/background/: mod.rs  render.rs  visual.rs
src/background/shader/: frag.glsl  vert.glsl
src/debug/: mod.rs  render.rs
src/input/: mod.rs
src/orbitbody/: mod.rs  render.rs  visual.rs
src/orbitbody/shader/: frag.glsl  vert.glsl
src/orbitcurve/: mod.rs  render.rs
src/orbitcurve/shader/: frag.glsl  vert.glsl
src/psocell/: macros.rs  mod.rs  watcher.rs
src/shader/: some.frag.glsl  some.vert.glsl
