[package]
name = "gfx-test"
version = "0.1.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]

[dependencies]
gfx = "0"
gfx_text = { git = "https://github.com/alexheretic/gfx_text", branch = "forward-compat" }
gfx_window_glutin = { path = "../gfx/src/window/glutin", version = "*" }
gfx_macros = "0"
glutin = "0"

log = "0"
pretty_env_logger = "0"
time = "0"
image = "0"
cgmath = "0"
notify = "4"
easer = "0"
num-traits = "0"

# [replace]
# "glutin:0.8.0" = { git = "https://github.com/alexheretic/glutin" }
