[package]
name = "prototype-orbit"
version = "0.1.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]

[dependencies]
gfx = "0"
gfx_text = "0"
gfx_window_glutin = "0"
gfx_macros = "0"
glutin = "0"
gfx_shader_watch = "0"
log = "0"
pretty_env_logger = "0"
time = "0"
image = "0"
cgmath = "0"
notify = "4"
easer = "0"
num-traits = "0"
uuid = { version = "0", features = ["v4"] }
rayon = "0"

[features]
bench = []
